Extra line-breaks added when copying from source. https://bugs.webkit.org/show_bug.cgi?id=85282

Reviewed by Ryosuke Niwa.

Source/WebCore:

The code used to replace any \n by \r\n, even the one that had a preceding \r, resulting in \r\r\n.
This change introduces a check for the preceding \r when replacing \n's.

Test: platform/win/editing/pasteboard/pasting-crlf-isnt-translated-to-crcrlf-win.html

* platform/chromium/ClipboardUtilitiesChromium.cpp:
(WebCore::replaceNewlinesWithWindowsStyleNewlines):
* platform/win/ClipboardUtilitiesWin.cpp:
(WebCore::replaceNewlinesWithWindowsStyleNewlines):

LayoutTests:

* platform/win/editing/pasteboard/pasting-crlf-isnt-translated-to-crcrlf-win-expected.txt: Added.
* platform/win/editing/pasteboard/pasting-crlf-isnt-translated-to-crcrlf-win.html: Added.

Canonical link: https://commits.webkit.org/103461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116408 268f45cc-cd09-0410-ab3c-d52691b4dbfc